--- a/game_invitation.html
+++ b/game_invitation.html
@@ -402,7 +402,9 @@
 
                             <div class="row py-3 px-4">
                                 <div class="col-6 pr-2">
-                                    <button type="button" class="btn fs_12px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>RATE</strong></button>
+                                    <a class="td_none-s" href="rating_player.html">
+                                        <button type="button" class="btn fs_12px-s bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>RATE</strong></button>
+                                    </a>
                                 </div>
 
                                 <!--SUBMIT button-->
