--- a/rating_player.html
+++ b/rating_player.html
@@ -15,28 +15,30 @@
 </head>
 
 <body class="bg_img-s">
-    <div class="container-fluid px-0">
-        <div class="row pt-4">
-            <div class="col-lg-6 col-md-8 order-md-1 order-2 mt-md-0 mt-3 d-flex ">
-                <a class="td_none-s" href="game_invitation.html">
-                    <h4 class="pr-2 text-dark">More</h4>
-                </a>
-                <h4 class="px-2"><strong>/</strong></h4>
-                <h4 class="fg_green-s pl-2">Rating Player</h4>
-            </div>
-            <div class="col-lg-6 col-md-4 order-md-2 order-1 text-right">
-                <div class="">
-                    <a class="pr-3">
-                        <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                        <span> Adailiya </span>
+    <div class="container-fluid px-0 mx-0 ">
+        <div class="container-fluid px-xl-5 px-3">
+            <div class="row pt-4 pb-3">
+                <div class=" col-md-8 col-12 order-md-1 order-2 d-flex ">
+                    <a class="td_none-s" href="game_invitation.html">
+                        <h4 class="pr-2 text-dark">More</h4>
                     </a>
-                    <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
-                    <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+                    <h4 class="px-2"><strong>/</strong></h4>
+                    <h4 class="fg_green-s pl-2">Rating Player</h4>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-right order-md-2 order-1">
+                    <div class="">
+                        <a class="pr-3">
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
+                            <span class="text-dark"> <strong>Adailiya </strong></span>
+                        </a>
+                        <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid bg-white br_47px-s mt-5 mh_86vh-s">
+        <div class="container-fluid bg-white br_47px-s mh_86vh-s">
             <div class="row py-4 px-xl-4 px-3">
                 <!--palyer information-->
                 <div class="col-lg-8 col-12 d-flex">
@@ -93,7 +95,7 @@
             </div>
             <div class="row px-xl-4 px-3">
                 <div class="fg_green-s col-12 text-center">
-                    <h3>GIVE YOUR RATING</h3>
+                    <h4>GIVE YOUR RATING</h4>
                 </div>
                 <div class="col-12">
                     <form action="">
@@ -101,8 +103,8 @@
                             <!--ability rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>ABILITY</strong></h5>
-                                    <h5 class="ability-d">0</h5>
+                                    <h6><strong>ABILITY</strong></h6>
+                                    <h6 class="ability-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" step="0.1" value="0" id="rating" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" data-parent='ability-d'>
@@ -113,8 +115,8 @@
                             <!--stamina rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>STAMINA</strong></h5>
-                                    <h5 id="ability-d" class="stamina-d">0</h5>
+                                    <h6><strong>STAMINA</strong></h6>
+                                    <h6 id="ability-d" class="stamina-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" data-parent='stamina-d'>
@@ -125,8 +127,8 @@
                             <!--strength rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>STRENGTH</strong></h5>
-                                    <h5 class="strength-d">0</h5>
+                                    <h6><strong>STRENGTH</strong></h6>
+                                    <h6 class="strength-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="strength-d">
@@ -137,8 +139,8 @@
                             <!--passes rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>PASSES</strong></h5>
-                                    <h5 class="passes-d">0</h5>
+                                    <h6><strong>PASSES</strong></h6>
+                                    <h6 class="passes-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="passes-d">
@@ -149,8 +151,8 @@
                             <!--shoots rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>SHOOTS</strong></h5>
-                                    <h5 class="shoots-d">0</h5>
+                                    <h6><strong>SHOOTS</strong></h6>
+                                    <h6 class="shoots-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="shoots-d">
@@ -161,8 +163,8 @@
                             <!--appearance rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>APPEARANCE</strong></h5>
-                                    <h5 class="appearance-d">0</h5>
+                                    <h6><strong>APPEARANCE</strong></h6>
+                                    <h6 class="appearance-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="appearance-d">
@@ -173,8 +175,8 @@
                             <!--pace rating-->
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
-                                    <h5><strong>PACE</strong></h5>
-                                    <h5 class="pace-d">0</h5>
+                                    <h6><strong>PACE</strong></h6>
+                                    <h6 class="pace-d">0</h6>
                                 </div>
                                 <div class="form-group rating_filed-s border">
                                     <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="pace-d">
@@ -191,13 +193,110 @@
                 <div class="col-12">
                     <div class="d-flex float-right">
                         <h5 class="mb-0 align-self-center"><strong>YOUR RATING IS <span>4.5</span></strong></h5>
-                        <button type="submit" class=" ml-3 br_10px-s bg_green-s text-white w_184px-s py-3 border-0"><strong>SUBMIT</strong></button>
+                        <button type="submit" class=" ml-3 br_10px-s bg_green-s text-white w_h_184px_x_63px-s py-3 border-0" data-toggle="modal" data-target="#player_played_modal-d"><strong>SUBMIT</strong></button>
                     </div>
                 </div>
             </div>
             <!--submit button end-->
         </div>
     </div>
+
+
+
+    <!-- modals -->
+
+    <!-- option for playing modal -->
+
+    <div class="modal fade" id="player_played_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered ">
+            <div class="modal-content br_10px-s border-0">
+                <div class="container-fluid">
+                    <!--header image-->
+                    <div class="row modal-header border-0 mt-3">
+                        <div class="col-12 text-center">
+                            <img src="assets/images/user_img.png" class="rounded-circle b_5px-s shadow" width="150" alt="player img">
+                        </div>
+                    </div>
+                    <!--header image end-->
+
+                    <div class="row modal-body text-center">
+                        <!--modal text-->
+                        <div class="col-12 ">
+                            <h4 class="fg_green-s">Jamele</h4>
+                            <a href="javascript:void(0)">
+                                <h5 class="opacity_4-s text-dark"><strong>@jamelemd</strong></h5>
+                            </a>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <h6><strong>Did jamele played this match?</strong></h6>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <p class="opacity_4-s">You can rate this only if he played this match? After confirming this, you can not revert it.</p>
+                        </div>
+                        <!--modal text end-->
+                    </div>
+                    <div class="row px-3 pt-3 pb-5">
+                        <!--NO button-->
+                        <div class="col-6 pr-2">
+                            <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" id="switch_to_no_rating_modal"><strong>No</strong></button>
+                        </div>
+                        <!--NO button end-->
+
+                        <!--YES button-->
+                        <div class="col-6 pl-2">
+                            <button type="button" class="btn bg_green-s br_10px-s py-3 text-white w-100" data-dismiss="modal"><strong>Yes</strong></button>
+                        </div>
+                        <!--YES button end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--player not played Modal -->
+    <div class="modal fade" id="player_not_played_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered ">
+            <div class="modal-content br_10px-s border-0">
+                <div class="container-fluid">
+                    <!--header image-->
+                    <div class="row modal-header border-0 mt-3">
+                        <div class="col-12 text-center">
+                            <img src="assets/images/user_img.png" class="rounded-circle b_5px-s shadow" width="150" alt="player img">
+                        </div>
+                    </div>
+                    <!--header image end-->
+
+                    <div class="row modal-body text-center">
+                        <!--modal text-->
+                        <div class="col-12 ">
+                            <h4 class="fg_green-s">Jamele</h4>
+                            <a href="javascript:void(0)">
+                                <h5 class="opacity_4-s text-dark"><strong>@jamelemd</strong></h5>
+                            </a>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <h5><strong>Sorry</strong></h5>
+                            <h5><strong>You can not rate him!!</strong></h5>
+                        </div>
+                        <div class="col-12 mt-3">
+                            <p class="opacity_4-s">You confirm that jamele did not played this match.</p>
+                        </div>
+                        <!--modal text end-->
+                    </div>
+                    <div class="row px-3 pt-2 pb-5">
+                        <!--close button-->
+                        <div class="col-12">
+                            <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>Close</strong></button>
+                        </div>
+                        <!--close button end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
