--- a/chat.html
+++ b/chat.html
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link" href="Home/home.html">
+                                    <a class="nav-link" href="index.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
