--- a/football_login1.html
+++ b/football_login1.html
@@ -36,7 +36,7 @@
                         <ul class="navbar-nav ">
                             <!--home-->
                             <li class="nav-item pr-xl-5 pl-xl-0 px-3">
-                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s  pl-0" href="Home/home.html">Home</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s  pl-0" href="index.html">Home</a>
                             </li>
                             <!--about-->
                             <li class="nav-item px-xl-5 px-3">
@@ -158,7 +158,7 @@
                     <a href="javascript:void(0)" class="text-white">Forgot Password?</a>
                 </div>
                 <!--login button-->
-                <a href="Home/home.html" role="button" type="submit" class="btn bg_green-s w-100 br_10px-s text-white py-3 mt-5 mb-5">Log In</a>
+                <a href="index.html" role="button" type="submit" class="btn bg_green-s w-100 br_10px-s text-white py-3 mt-5 mb-5">Log In</a>
                 <!--signup option-->
                 <div class=" text-center pt-xl-5 pt-2">
                     <span class="text-white">Don't have an account? <a href="javascript:void(0)" class="text-white">Sign Up</a>.</span>
