--- a/more.html
+++ b/more.html
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-lg-0 ml-2">
-                                    <a class="nav-link pl-lg-0" href="Home/home.html">
+                                    <a class="nav-link pl-lg-0" href="index.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
@@ -86,7 +86,7 @@
                     <h4>Change your account settings</h4>
                 </div>
                 <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
-                    <a href="football_login1.html"  class="btn bg_green-s br_10px-s d-flex justify-content-center w_h_184px_x_63px-s text-white py-3">
+                    <a href="football_login1.html" class="btn bg_green-s br_10px-s d-flex justify-content-center w_h_184px_x_63px-s text-white py-3">
                         <img src="assets/images/logout_icon.svg" width="20" class="mr-2" alt="logout icon">
                         <strong class="align-self-center"><h6 class="mb-1">Logout</h6></strong>
                     </a>
