--- a/favorite_player.html
+++ b/favorite_player.html
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link" href="Home/home.html">
+                                    <a class="nav-link" href="index.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
@@ -143,7 +143,7 @@
                                     <div class="aditya_location">
                                         <p>
                                             <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send message >> </span>
+                                            <span class="pull-right"> send invitation >> </span>
                                         </p>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                     <div class="aditya_location">
                                         <p>
                                             <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send message >> </span>
+                                            <span class="pull-right"> send invitation >> </span>
                                         </p>
                                     </div>
                                 </div>
