--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3">
+                            <a class="pr-3 td_none-s" href="user_profile.html">
                                 <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span> Adailiya </span>
+                                <span class="text-dark"> <strong>Adailiya </strong> </span>
                             </a>
                             <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
@@ -116,10 +116,10 @@
 
         <div class="btn_grp pt-5 mt-3 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
             <button class="btn btn-lg">All positions</button>
-            <button class="btn btn-lg">All positions</button>
-            <button class="btn btn-lg">All positions</button>
-            <button class="btn btn-lg">All positions</button>
-            <button class="btn btn-lg">All positions</button>
+            <button class="btn btn-lg">Goal Keeper</button>
+            <button class="btn btn-lg">Defender</button>
+            <button class="btn btn-lg">Attacker</button>
+            <button class="btn btn-lg">Middle Man</button>
         </div>
         <!-- .................Home Page Button Group Section End ......................... -->
         <!-- container for list of players - start -->
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card br_25px-s">
+                            <div class="card home_card br_25px-s card_bg_img-s">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart fs_32px-s" aria-hidden="true"></i>
                                 </div>
@@ -178,8 +178,10 @@
 
                                     <div class="aditya_location">
                                         <p>
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send invitation >> </span>
+                                            <a class="td_none-s text-white" href="Home/home-sent-invitation.html">
+                                                <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
+                                                <span class="pull-right text-white"> send invitation >> </span>
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -233,8 +235,10 @@
 
                                     <div class="aditya_location">
                                         <p>
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send invitation >> </span>
+                                            <a class="td_none-s text-white" href="Home/home-sent-invitation.html">
+                                                <i class=" fa fa-map-marker" aria-hidden="true"></i> Aditya
+                                                <span class="pull-right text-white"> send invitation >> </span>
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -804,9 +808,9 @@
         <!-- container for list of players - end -->
     </div>
     <!-- .................Home Page End ......................... -->
-    <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
