--- a/more.html
+++ b/more.html
@@ -63,9 +63,9 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a class="pr-3">
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img " alt="navbar_home" />
-                                <span class="text-dark"> <strong>Adailiya </strong></span>
+                            <a class="pr-3 td_none-s">
+                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                                <span class="text-dark"> <strong>Adailiya </strong> </span>
                             </a>
                             <img src="assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
                             <img src="assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
