--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <!-- .................Home Page Button Group Section End ......................... -->
 
-        <div class="btn_grp pt-5 mt-3 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
+        <div class="btn_grp pt-5 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
             <button class="btn btn-lg">All positions</button>
             <button class="btn btn-lg">Goal Keeper</button>
             <button class="btn btn-lg">Defender</button>
