--- a/chat.html
+++ b/chat.html
@@ -121,7 +121,7 @@
                         <div class="col-xl-4 col-lg-4 col-md-12 col-12 border-0">
 
                             <div class="row">
-                                <div class="col-12 ml-xl-5 mt-xl-5 mb-xl-3">
+                                <div class="col-12 ml-xl-2 mt-xl-2 mb-xl-2">
                                     <span class="ft_2rem-s">Chats</span>
                                 </div>
                             </div>
@@ -274,7 +274,7 @@
                             <!-- profile detail of next person in chat - start -->
                             <div class="row">
                                 <div class="col-12 border-bottom">
-                                    <div class="row pb-3">
+                                    <div class="row">
                                         <div class="col-10 d-flex">
                                             <div class="profile_img-s d-flex justify-content-between">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
@@ -380,8 +380,8 @@
                                 </div>
                             </div>
                             <!-- chat input - start -->
-                            <div class="input-group word-break word-wrap my-4 shadow">
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                            <div class="input-group word-break word-wrap my-4 shadow br_10px-s">
+                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
