--- a/favorite_player.html
+++ b/favorite_player.html
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row py-3 px-xl-5">
                 <div class="col-12 pt-4">
-                    <h1 class="">Favorites</h1>
+                    <h1 class=""><strong>Favorites</strong></h1>
                     <h4 class="">All your favorite players.</h4>
                 </div>
             </div>
