--- a/user_profile.html
+++ b/user_profile.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="card usercard">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="userp_hearticon">
                         <i class="fa fa-heart" aria-hidden="true"></i>
                     </div>
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div class="container-fluid">
                 <div class="nav-tabs d-flex performance_text pt-5 mb-5">
                     <p class="active position-relative">
                         <a data-toggle="tab" href="#home">performance
