--- a/chat.html
+++ b/chat.html
@@ -79,12 +79,12 @@
         <!-- -------heading container - start -->
         <div class="container-fluid">
             <div class="row py-3 px-xl-5">
-                <div class="col-5 pt-4">
-                    <h1 class="">Chat</h1>
+                <div class="col-12 col-md-5 pt-4">
+                    <h1 class=""><strong>Chat</strong></h1>
                     <h4 class="">Send messages to other players.</h4>
                 </div>
-                <div class="col-6 align-self-end">
-                    <div class="row d-flex justify-content-end">
+                <div class="col-12 col-md-6 align-self-end">
+                    <div class="row d-flex justify-content-center justify-content-md-end">
 
                         <div class="profile_img-s mx-3">
                             <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
@@ -153,7 +153,7 @@
                                             <div class="mt-3 ft_size_12px-s text-center">
                                                 <span>2 Hours</span>
                                             </div>
-                                            <div class="message_count-s text-center ml-4">
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
                                                 <p class="fg_white-s mt-3 pt-1">12</p>
                                             </div>
 
@@ -187,7 +187,7 @@
                                             <div class="mt-3 ft_size_12px-s text-center">
                                                 <span>yesterday</span>
                                             </div>
-                                            <div class="message_count-s text-center ml-4">
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
                                                 <p class="fg_white-s mt-3 pt-1">2</p>
                                             </div>
 
@@ -221,7 +221,7 @@
                                             <div class="mt-3 ft_size_12px-s text-center">
                                                 <span>02/08/21</span>
                                             </div>
-                                            <div class="message_count-s text-center ml-4">
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
                                                 <p class="fg_white-s mt-3 pt-1">1</p>
                                             </div>
 
@@ -255,7 +255,7 @@
                                             <div class="mt-3 ft_size_12px-s text-center">
                                                 <span>04/05/21</span>
                                             </div>
-                                            <div class="message_count-s text-center ml-4">
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
                                                 <p class="fg_white-s mt-3 pt-1">3</p>
                                             </div>
 
@@ -336,7 +336,7 @@
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
-                                        <div class="col-12 text-right">
+                                        <div class="col-12 text-right mr-xl-5 pr-xl-5 mr-lg-5">
                                             <span class="ft_12px-s"> 12:43 pm</span>
                                         </div>
                                     </div>
@@ -363,7 +363,13 @@
 
                                     <div class="row py-3 justify-content-end">
                                         <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                            <div class="row">
+                                                <div class="col px-3 mx-3 mt-2 pt-2 bg-white br_5px-s">
+                                                    <strong class="ft_14px-s fg_green-s">Thamer</strong><span class="text-dark float-right">12:15 PM</span>
+                                                    <p class="text-dark">Lorem ipsum dolor sit ametrem ipsum dolor sit ametrem ipsum dolor sit ametv </p>
+                                                </div>
+                                            </div>
+                                            <p class="mt-2">Lorem ipsum dolor sit amet,
                                             </p>
                                         </div>
                                         <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
@@ -371,7 +377,7 @@
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
-                                        <div class="col-12 text-right">
+                                        <div class="col-12 text-right mr-xl-5 pr-xl-5 mr-lg-5">
                                             <span class="ft_12px-s"> 12:43 pm</span>
                                         </div>
                                     </div>
