--- a/chat.html
+++ b/chat.html
@@ -118,7 +118,7 @@
                     <div class="row">
 
                         <!-- ----- chat member list - start ----- -->
-                        <div class="col-xl-4 col-lg-4 col-md-12 col-12 border-0">
+                        <div class="col-xl-4 col-lg-4 col-md-12 col-12 border-0 h_580px-s">
 
                             <div class="row">
                                 <div class="col-12 ml-xl-2 mt-xl-2 mb-xl-2">
@@ -126,7 +126,142 @@
                                 </div>
                             </div>
 
-                            <div class="row d-flex justify-content-center h_450px-s">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-10 col-lg-11 br_10px-s my-2 br_on_hover-s">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>2 Hours</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
+                                                <p class="fg_white-s mt-3 pt-1">12</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 col-lg-11 br_10px-s my-2 br_on_hover-s">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>yesterday</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
+                                                <p class="fg_white-s mt-3 pt-1">2</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 col-lg-11 br_10px-s my-2 br_on_hover-s">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>02/08/21</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
+                                                <p class="fg_white-s mt-3 pt-1">1</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-10 col-lg-11 br_10px-s my-2 br_on_hover-s">
+                                    <div class="row border br_10px-s py-1 bg-greenish_grey-s">
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
+                                            <div class="profile_img-s">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-md-6 col-lg-6 col-xl-6 px-0">
+                                            <div class="row">
+                                                <div class="col-12 px-0">
+                                                    <strong class="ft_17px-s fg_green-s">Thamer</strong>
+                                                </div>
+                                                <div class="col-12 px-0">
+                                                    <strong class="fg_lightgrey_s">@Thamermd</strong>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-12 ft_size_12px-s px-0 mt-2">
+                                                    <p>Everyone is waiting.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-3 col-md-3 col-lg-3 col-xl-3">
+                                            <div class="mt-3 ft_size_12px-s text-center">
+                                                <span>04/05/21</span>
+                                            </div>
+                                            <div class="message_count-s text-center ml-xl-4 ml-lg-3 ml-md-5">
+                                                <p class="fg_white-s mt-3 pt-1">3</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-10 col-lg-11 br_10px-s my-2 br_on_hover-s">
                                     <div class="row border br_10px-s py-1 bg-greenish_grey-s">
                                         <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center pl-lg-2 pl-xl-3 pl-1 pl-md-5">
@@ -295,8 +430,8 @@
                             <!-- profile detail of next person in chat - end -->
 
                             <!-- chat room -start -->
-                            <div class="row">
-                                <div class="col h_450px-s">
+                            <div class="row h_450px-s">
+                                <div class="col">
 
                                     <!-- timeline of chat -->
                                     <div class="row">
@@ -331,12 +466,8 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
-                                        <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-md-2 ml-0">
-                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="col-12 text-right mr-xl-5 pr-xl-5 mr-lg-5">
+
+                                        <div class="col-12 text-right">
                                             <span class="ft_12px-s"> 12:43 pm</span>
                                         </div>
                                     </div>
@@ -372,12 +503,8 @@
                                             <p class="mt-2">Lorem ipsum dolor sit amet,
                                             </p>
                                         </div>
-                                        <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-md-2 ml-0">
-                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="col-12 text-right mr-xl-5 pr-xl-5 mr-lg-5">
+
+                                        <div class="col-12 text-right">
                                             <span class="ft_12px-s"> 12:43 pm</span>
                                         </div>
                                     </div>
@@ -386,7 +513,7 @@
                                 </div>
                             </div>
                             <!-- chat input - start -->
-                            <div class="input-group word-break word-wrap my-4 shadow br_10px-s">
+                            <div class="input-group word-break word-wrap mt-4 py-2  shadow br_10px-s">
                                 <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s br_left_10px-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
                                 <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
