--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
                     <div class="row">
                         <div class="col-12 text-left py-2">
                             <h2>Players <span> (50) </span> </h2>
+                            <div class="pull-right position-absolute filter_img d-flex flex-wrap">
+                                <img src="../assets/images/filter.svg" alt="" />
+                                <span>Filter by:
+                                    <span class="rating_text">Rating | Price | Nearest Location</span>
+                                </span>
+                            </div>
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
